# hermes-collective

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh
hermes_collective/: __init__.py  aggregator.py  bootstrap.py  cli.py  git_ops.py  plugin.py  quality.py
hermes_collective/skills/employee-daily/: SKILL.md
hermes_collective/skills/manager-cycle/: SKILL.md
hermes_collective/skills/quality-pruning/: SKILL.md
templates/repo-structure/.collective/: employee-daily.sh  manager-cycle.sh  pruning-weekly.sh
tests/: conftest.py  test_aggregator.py  test_bootstrap.py  test_cli.py  test_quality.py
